<resources>
    <string name="app_name">Admonere</string>
    <string name="past">PAST</string>
    <string name="current">CURRENT</string>
    <string name="not_done">IN PROGRESS</string>
    <string name="help">HELP</string>
    <string name="settings">SETTINGS</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="delete">Delete</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="message">Message</string>
    <string name="join_the_dark_side">Join the Dark Side?</string>
    <string name="isdark">isDark</string>
    <string name="navcolor">navColor</string>
    <string name="theme">theme</string>
    <string name="darkno">darkno</string>
    <string name="darkyes">darkyes</string>
    <string name="lightno">lightno</string>
    <string name="lightyes">lightyes</string>
    <string name="dark">dark</string>
    <string name="light">light</string>
    <string name="enable_navigation_bar_color">Enable Navigation Bar Color?</string>
    <string name="mx_remind_reps">Maximum Repetitions:</string>
    <string name="day">day(s)</string>
    <string name="ongoing">Ongoing</string>
    <string name="finished">Finished</string>
</resources>
