<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.conrad.admonere.EditActivity">

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/set_reminder"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="411dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/thuBtn" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendBtn"
        android:layout_alignBottom="@+id/sendBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/delete"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/datePick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="false"
        android:ems="10"
        android:hint="@string/choose_date"
        android:inputType="date"
        android:textColorLink="#FFC300" />

    <EditText
        android:id="@+id/timePick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/choose_time"
        android:inputType="time"
        android:textColorLink="#FFC300"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/datePick"
        android:layout_alignStart="@+id/datePick" />

    <TextView
        android:id="@+id/freqLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/maxFreq"
        android:layout_alignEnd="@+id/maxFreq"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/mx_remind_reps"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/maxFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:inputType="number"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/thuBtn"
        android:layout_alignEnd="@+id/timePick" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/choose_contact"
        android:inputType="phone"
        android:textColorLink="#FFC300"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/message"
        android:layout_alignStart="@+id/timePick" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:textColorLink="#FFC300"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/sendBtn"
        android:layout_alignStart="@+id/phoneNumber" />

    <Button
        android:id="@+id/sunBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Sun"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_marginStart="-73dp"
        android:layout_alignBaseline="@+id/wedBtn"
        android:layout_alignBottom="@+id/wedBtn"
        android:layout_alignStart="@+id/phoneNumber" />

    <Button
        android:id="@+id/monBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Mon"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_marginStart="-20dp"
        android:layout_alignBaseline="@+id/wedBtn"
        android:layout_alignBottom="@+id/wedBtn"
        android:layout_alignStart="@+id/phoneNumber" />

    <Button
        android:id="@+id/tueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Tue"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_marginStart="34dp"
        android:layout_alignBaseline="@+id/wedBtn"
        android:layout_alignBottom="@+id/wedBtn"
        android:layout_alignStart="@+id/phoneNumber" />

    <Button
        android:id="@+id/wedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Wed"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/thuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Thu"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_alignBaseline="@+id/wedBtn"
        android:layout_alignBottom="@+id/wedBtn"
        android:layout_toEndOf="@+id/wedBtn"
        android:layout_marginStart="13dp" />

    <Button
        android:id="@+id/friBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Fri"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_alignBaseline="@+id/wedBtn"
        android:layout_alignBottom="@+id/wedBtn"
        android:layout_toEndOf="@+id/wedBtn"
        android:layout_marginStart="66dp" />

    <Button
        android:id="@+id/satBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:background="@drawable/roundedbutton"
        android:clickable="true"
        android:fontFamily="monospace"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="7dp"
        android:text="Sat"
        android:textColor="?btnText"
        android:textColorLink="#FFC300"
        android:layout_alignBaseline="@+id/wedBtn"
        android:layout_alignBottom="@+id/wedBtn"
        android:layout_toEndOf="@+id/wedBtn"
        android:layout_marginStart="120dp" />

</RelativeLayout>
